--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "root",
+  "name": "carronut-ui-root",
   "version": "0.0.0",
-  "packageManager": "pnpm@10.9.0",
   "private": true,
   "type": "module",
   "scripts": {
     "dev": "pnpm run --filter=./packages/examples -r dev",
-    "build": "pnpm run build:ui && pnpm run build:examples",
+    "dev:docs": "pnpm run --filter=./packages/docs -r docs:dev",
+    "build": "pnpm run build:ui && pnpm run build:examples && pnpm run build:docs",
+    "build:docs": "pnpm run --filter=./packages/docs -r docs:build",
     "build:examples": "pnpm run --filter=./packages/examples -r build",
     "build:ui": "pnpm run --filter=./packages/ui -r build",
+    "preview:docs": "pnpm run --filter=./packages/docs -r docs:preview",
     "lint": "pnpm --recursive run lint",
     "test": "pnpm run test:ui",
     "test:ui": "pnpm run --filter=./packages/ui -r test",
