--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
+  "packageManager": "pnpm@10.9.0",
   "scripts": {
     "dev": "pnpm run --filter=./packages/examples -r dev",
     "dev:docs": "pnpm run --filter=./packages/docs -r docs:dev",
